# simple-peaks

./: .gitignore  LICENSE  README.md  activate.sh  pyproject.toml  requirements.txt  setup.sh
front-end/: next.config.ts  package.json
front-end/public/artists/jordan/: bio.md
front-end/src/app/: layout.tsx  page.tsx
front-end/src/app/[video_file_name]/: page.tsx
front-end/src/app/artists/[artist]/: page.tsx
notes/: 20250424.md
notes/_reference/: hyper_h_2504241626_0003.json
simple_peaks/: __init__.py  audio_utils.py  cli.py  core.py  extract_clips.py  find_loud.py  split.py  split2.py  split_audio.py
tests/: test_cli.py
