[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-peaks"
version = "0.1.0"
description = "A simple Python CLI tool to split audio/video and find loudest segments."
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}

# Main dependencies
dependencies = [
    "numpy",
    "librosa",
]

[project.scripts]
simple-peaks = "simple_peaks.cli:main"
